Bug 383444 - Titlebar text is not updated correctly
Summary: Titlebar text is not updated correctly
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (show other bugs)
Version: git master
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D7290
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-13 07:33 UTC by rооt
Modified: 2017-08-13 17:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
mgraesslin: Wayland+
mgraesslin: X11+
mgraesslin: ReviewRequest+


Attachments
xprop.txt (52.60 KB, text/plain)
2017-08-13 08:55 UTC, rооt
Details
qdbus org.kde.KWin /KWin supportInformation (9.43 KB, text/plain)
2017-08-13 10:45 UTC, rооt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rооt 2017-08-13 07:33:40 UTC
Titlebar text is not updated correctly for example Gwenview opens the image press "Go to next image" title bar text left from the previous image.
The same in other programs, the text seems to be updated only when the focus changes between the open windows.
Comment 1 Martin Flöser 2017-08-13 07:58:17 UTC
Please xprop on the window when it is wrong.
Comment 2 rооt 2017-08-13 08:55:22 UTC
Created attachment 107248 [details]
xprop.txt

The text should be "grub — Dolphin" but it has not been updated
http://i.imgur.com/UDWqR5o.png
Comment 3 Martin Flöser 2017-08-13 10:35:47 UTC
please provide the output of:
qdbus org.kde.KWin /KWin supportInformation
Comment 4 rооt 2017-08-13 10:45:48 UTC
Created attachment 107250 [details]
qdbus org.kde.KWin /KWin supportInformation
Comment 5 Martin Flöser 2017-08-13 11:08:36 UTC
Thanks. That's a regression introduced with ddf3536f19a4243670e5fc87f5fbaf9e44031542 - well not really a regression, the code was only working correctly by accident before.

Fix is luckily trivial, but I'll also add a test case, so takes a little bit.
Comment 6 Martin Flöser 2017-08-13 11:09:40 UTC
client.cpp method Client::setCaption

in the if (!force) block captionChanged needs to be emitted.
Comment 7 Martin Flöser 2017-08-13 14:53:10 UTC
Git commit d0c2c1ed09e5ea15dd89c6385f7a099c41c2d841 by Martin Gräßlin.
Committed on 13/08/2017 at 14:52.
Pushed by graesslin into branch 'master'.

[autotests] Add test case for updating X11 client captions

M  +52   -0    autotests/integration/x11_client_test.cpp

https://commits.kde.org/kwin/d0c2c1ed09e5ea15dd89c6385f7a099c41c2d841
Comment 8 Martin Flöser 2017-08-13 14:56:47 UTC
Fix at https://phabricator.kde.org/D7290
Comment 9 Martin Flöser 2017-08-13 17:23:36 UTC
Git commit f50fbde1a9edae2eb9dd2947e457687dc94b41a7 by Martin Gräßlin.
Committed on 13/08/2017 at 17:23.
Pushed by graesslin into branch 'master'.

Always emit Client::captionChanged when the caption changed

Summary:
With ddf3536f19a4243670e5fc87f5fbaf9e44031542 a regression got
introduced resulting in Client::captionChanged not being emitted if
Client::setCaption was called without the force parameter.

The regression is only in master branch.

Test Plan: Added test case passes

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D7290

M  +0    -1    autotests/integration/x11_client_test.cpp
M  +3    -1    client.cpp

https://commits.kde.org/kwin/f50fbde1a9edae2eb9dd2947e457687dc94b41a7